// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tabs snapshot Tabs: 0 1`] = `
<div
  className="tabs-class"
>
  <div
    aria-label="A set of example text content"
    aria-orientation="horizontal"
    className="tab_list-class"
    role="tablist"
  >
    <button
      aria-controls="tab02"
      aria-selected={false}
      className="tab-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      tab one
    </button>
    <button
      aria-controls="tab03"
      aria-selected={false}
      className="tab-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      tab one
    </button>
    <button
      aria-controls="tab04"
      aria-selected={true}
      className="tab-class tab__active-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={0}
    >
      tab one
    </button>
  </div>
  <div
    aria-hidden={true}
    aria-labelledby="tab02"
    className="tab_panel-class"
    id="tab02"
    role="tabpanel"
  >
    tab one content
  </div>
  <div
    aria-hidden={true}
    aria-labelledby="tab03"
    className="tab_panel-class"
    id="tab03"
    role="tabpanel"
  >
    tab one content
  </div>
  <div
    aria-hidden={false}
    aria-labelledby="tab04"
    className="tab_panel-class"
    id="tab04"
    role="tabpanel"
  >
    tab one content
  </div>
</div>
`;

exports[`tabs snapshot Tabs: 1 1`] = `
<div
  className="tabs-class"
>
  <div
    aria-label="A set of example text content"
    aria-orientation="vertical"
    className="tab_list-class"
    role="tablist"
  >
    <button
      aria-controls="tab01"
      aria-selected={false}
      className="tab-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      tab one
    </button>
    <button
      aria-controls="tab03"
      aria-selected={true}
      className="tab-class tab__active-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={0}
    >
      tab one
    </button>
  </div>
  <div
    aria-hidden={true}
    aria-labelledby="tab01"
    className="tab_panel-class"
    id="tab01"
    role="tabpanel"
  >
    tab one content
  </div>
  <div
    aria-hidden={false}
    aria-labelledby="tab03"
    className="tab_panel-class"
    id="tab03"
    role="tabpanel"
  >
    tab one content
  </div>
</div>
`;

exports[`tabs snapshot Tabs: 2 1`] = `
<div
  className="tabs-class"
>
  <div
    aria-label="A set of example text content"
    aria-orientation={undefined}
    className="tab_list-class"
    role="tablist"
  />
</div>
`;

exports[`tabs snapshot Tabs: 3 1`] = `
<div
  className="tabs-class"
>
  <div
    aria-label="A set of example text content"
    aria-orientation={undefined}
    className="tab_list-class"
    role="tablist"
  />
</div>
`;
